--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <!-- Scripts -->
-    <script src="../scripts/index.js"></script>
+    <script src="index.js"></script>
   
   </body>
 </html>
