--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </form>
           </div>
           <div class="col-sm-6">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias officiis atque eveniet dignissimos, nisi, corrupti nam dolorem autem fugit porro nesciunt eaque, cum numquam temporibus. Provident optio nemo quas consequuntur.
            
       </div>
     </div>
