--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Title -->
-    <title>ProgressBook</title> 
+    <title>Libook</title> 
   </head>
 
   <body>
     <div class="navbar navbar-expand-sm bg-light navbar-light justify-content-between">
       <div class="navbar-header">
-        <a href="index.html" class="navbar-brand">ProgressBook</h1></a>
+        <a href="index.html" class="navbar-brand">Libook</h1></a>
       </div>
       <form action="#" class="form-inline">
         <input name= "search-text" type="text" class="form-control" placeholder="Search">
@@ -39,8 +39,9 @@
             </form>
           </div>
           <div class="col-sm-6">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias officiis atque eveniet dignissimos, nisi, corrupti nam dolorem autem fugit porro nesciunt eaque, cum numquam temporibus. Provident optio nemo quas consequuntur.
-           
+            
+          </div>
+        </div>
       </div>
     </div>
     <div class="container">
